# effective-cpp

./: .gitignore  .gitmodules
tasks/: CMakeLists.txt  deadline.json  readme.md
tasks/avx-matmul/: avx_matmul.h  readme.md
tasks/bgrep/: bgrep.h  build.cmake  main.cpp  test.cpp
tasks/buffered-channel/: buffered_channel.h  readme.md  test.json
tasks/byte_order/: byte_order.h
tasks/cache/: CMakeLists.txt  main.cpp  readme.md
tasks/clever-set/: clever_set.h
tasks/concepts/: indexable.h  predicate.h
tasks/cow-vector/: cow_vector.h
tasks/deque/: deque.h
tasks/dispatch/: CMakeLists.txt  advance.h  clear.h  readme.md  test.cpp
tasks/fold/: fold.h
tasks/hashmap/: CMakeLists.txt  hashmap.h  readme.md  test.cpp
tasks/intrusive-list/: intrusive_list.h
tasks/itertools/: itertools.h  test.cpp
tasks/local-max/: local_max.h  readme.md  test.cpp
tasks/lru-cache/: lru_cache.h  readme.md  test.cpp
tasks/multiplication/: readme.md
tasks/orderbook/: CMakeLists.txt  circular_orderbook.h  main.cpp  pcapng.hpp  readme.md  static_alocator.h  test.json  thread_pool.h
tasks/png-decoder/: build.cmake  image.h  test.json
tasks/png-decoder/src/: crc.cpp  crc.h  inflater.cpp  inflater.h  png_decoder.cpp  png_decoder.h
tasks/reduce/: readme.md  reduce.h  test.json
tasks/reverse_vector/: reverse_vector.h
tasks/rw-lock/: CMakeLists.txt  readme.md  run.cpp  rw_lock.h  test.cpp  test.json
tasks/set_allocator/: static_stl_allocator.h  test.cpp
tasks/shm-matrix/: CMakeLists.txt  main.cpp  matrix.h  readme.md  tester.py
tasks/short_view/: short_view.h  test.cpp
tasks/sse-search/: sse_search.h
tasks/static-map/: static_map.h  test.cpp
tasks/static_allocator/: static_allocator.h  test.cpp
tasks/tic-tac-toe/: CMakeLists.txt  readme.md
tasks/tic-tac-toe/my_strategy/: my_strategy.cpp  my_strategy.h
tasks/tic-tac-toe/utility/: checker.h  main.cpp
tasks/trades/: readme.md  test.json  test_lib.sh  test_reader.cpp  trade.h  trades.cmake
tasks/trades/index/: index.cpp  index.h
tasks/trades/reader/: reader.cpp  reader.h
tasks/tutorials/: environment.md
